# Qt-Desktop-Build-Script

./: .clang-format  .gitignore  .project.ini  CMakeLists.txt  README.md  desktop.sh  main.cpp  main.qml  qt.sh
